<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:caneru="http://schemas.android.com/tools"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <import type="com.caneru.notesjava.util.validator.type.ValidationType" />

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="8dp">

        <TextView
            android:id="@+id/tvTitle"
            style="@style/MaterialAlertDialog.MaterialComponents.Title.Text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:text="@string/create_note_title"
            android:textSize="20sp"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="Title" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/ilTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            app:errorEnabled="true"
            app:layout_constraintTop_toBottomOf="@id/tvTitle"
            caneru:validationWatcher="@{ValidationType.EMPTY_VALIDATION}">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etTitle"
                style="@style/TextAppearance.MaterialComponents.Subtitle1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:hint="@string/edittext_hint_title" />

        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/tvDescription"
            style="@style/MaterialAlertDialog.MaterialComponents.Title.Text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:text="@string/create_note_description"
            android:textSize="20sp"
            app:layout_constraintTop_toBottomOf="@id/ilTitle"
            tools:text="Description" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/ilDescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8sp"
            app:errorEnabled="true"
            app:layout_constraintTop_toBottomOf="@id/tvDescription"
            caneru:validationWatcher="@{ValidationType.EMPTY_VALIDATION}">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etDescription"
                style="@style/TextAppearance.MaterialComponents.Subtitle1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:hint="@string/edittext_hint_description" />

        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/tvImage"
            style="@style/MaterialAlertDialog.MaterialComponents.Title.Text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:text="@string/create_image_url"
            android:textSize="20sp"
            app:layout_constraintTop_toBottomOf="@id/ilDescription"
            tools:text="Image URL" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/ilImage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/tvImage">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etImage"
                style="@style/TextAppearance.MaterialComponents.Subtitle1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8sp"
                android:background="@color/white"
                android:hint="@string/edittext_hint_image" />

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/buttonSave"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/button_save_note"
            app:layout_constraintBottom_toBottomOf="parent"
            tools:text="Save Note" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>